--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/funxdata/xrutes.git"
 keywords = ["rout", "funxdata"] # 推荐
-categories = ["web"] 
+categories = ["web-programming","gui"] 
 
 [dependencies]
 http = "1.3.1"
